<resources>
    <string name="app_name">ABSA Test</string>
    <string name="to_to_list_title">TODO List</string>
    <string name="add_to_do_title">Add new TODO</string>
    <string name="text_no_todos_found">No TODOs Added as yet</string>
    <string name="text_swipe_to_refresh">Swipe to refresh</string>
    <string name="text_add_new">Add new</string>
    <string name="image_todo">TODO Image</string>
    <string name="image_delete">Delete Image</string>
    <string name="title_add_todo">Add a new To Do Item</string>
    <string name="text_title">Title</string>
    <string name="text_due_date">Due date (yyyy/MM/dd)</string>
    <string name="text_due_time">Due time (HH:mm)</string>
    <string name="text_description">Description</string>
</resources>