<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/Empty_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:visibility="visible"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_todo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/checkbox_icon"
        android:contentDescription="@string/image_todo" />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_todo"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/text_no_todos_found"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_error_message"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="gone"
        android:text="@string/text_swipe_to_refresh"/>

    <TextView
        android:id="@+id/addNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_error_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@color/red"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/text_add_new"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="visible"/>

</RelativeLayout>